@@ -1,32 +1,0 @@
-/* Copyright (C) 2012 Oliver Lemke <olemke@core-dump.info>
-  
-   This program is free software; you can redistribute it and/or
-   modify it under the terms of the GNU General Public License as
-   published by the Free Software Foundation; either version 2 of the
-   License, or (at your option) any later version.
-  
-   This program is distributed in the hope that it will be useful,
-   but WITHOUT ANY WARRANTY; without even the implied warranty of
-   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-   GNU General Public License for more details.
-  
-   You should have received a copy of the GNU General Public License
-   along with this program; if not, write to the Free Software
-   Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
-   USA. */
-
-/*!
-  \file   gui.h
-  \author Oliver Lemke <olemke@core-dump.info>
-  \date   2011-12-07
- 
-  \brief  Graphical user interface
- 
-*/
- 
-#ifndef AG_MAIN_H
-#define AG_MAIN_H
-
-int ag_main(int argc, char *argv[]);
-
-#endif /* AG_MAIN_H */
