@@ -1,3 +1,12 @@
+2017-12-19  Oliver Lemke  <olemke@core-dump.info>
+
+	* arts-2-3-904
+	
+	* CMakeLists.txt, src/CMakeLists.txt, config.h.cmake, src/gui/*,
+	src/main.cc, src/parameters.cc:
+
+	Remove obsolete gui testing code.
+
 2017-12-18  Richard Larsson  <ric.larsson@gmail.com>
 
 	* arts-2-3-903
